--- a/b2g/config/flame/config.json
+++ b/b2g/config/flame/config.json
@@ -35,7 +35,7 @@
         "VARIANT": "user",
         "MOZILLA_OFFICIAL": "1",
         "MOZ_TELEMETRY_REPORTING": "1",
-        "B2G_UPDATE_CHANNEL": "nightly",
+        "B2G_UPDATE_CHANNEL": "nightly-b2g44",
         "GAIA_KEYBOARD_LAYOUTS": "en,pt-BR,es,de,fr,pl,zh-Hans-Pinyin,zh-Hant-Zhuyin,en-Dvorak"
     },
     "b2g_manifest": "flame.xml",
