--- a/b2g/config/dolphin/config.json
+++ b/b2g/config/dolphin/config.json
@@ -33,7 +33,7 @@
     "env": {
         "VARIANT": "user",
         "MOZILLA_OFFICIAL": "1",
-        "B2G_UPDATE_CHANNEL": "nightly"
+        "B2G_UPDATE_CHANNEL": "nightly-b2g44"
     },
     "b2g_manifest": "dolphin.xml",
     "b2g_manifest_intree": true,
