Bug 1223447: Enable fota builds for flame and nexus devices. r=jlund,a=v2.5-fixes

--- a/testing/taskcluster/tasks/builds/b2g_flame_kk_ota_opt.yml
+++ b/testing/taskcluster/tasks/builds/b2g_flame_kk_ota_opt.yml
@@ -16,3 +16,4 @@ task:
       build-flame-kk-ota-user-objdir-gecko-{{project}}: /home/worker/objdir-gecko
     env:
       VARIANT: user
+      MOZHARNESS_CONFIG: b2g/taskcluster-phone-fota.py
