Bug 1222210 - Switch Gaia 2.5 builds to use 2.5 l10n repos, r=fabrice a=fabrice

--- a/b2g/config/dolphin/config.json
+++ b/b2g/config/dolphin/config.json
@@ -42,7 +42,7 @@
     "gaia": {
         "l10n": {
             "vcs": "hgtool",
-            "root": "https://hg.mozilla.org/gaia-l10n"
+            "root": "https://hg.mozilla.org/releases/gaia-l10n/v2_5"
         }
     }
 }
