Bug 1226117 - Disable test_browserElement_inproc_OpenWindowEmpty.html on emulator. r=me a=Tomcat

--- a/dom/browser-element/mochitest/mochitest.ini
+++ b/dom/browser-element/mochitest/mochitest.ini
@@ -246,3 +246,4 @@ disabled = bug 774100
 [test_browserElement_inproc_SetNFCFocus.html]
 [test_browserElement_inproc_getStructuredData.html]
 [test_browserElement_inproc_OpenWindowEmpty.html]
+skip-if = (toolkit == 'gonk') # Test doesn't work on B2G emulator
